--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -8,15 +9,17 @@
 </head>
 <body>
     <h1>Quem sou eu?</h1>
-    <p> Me chamo Murilo Tavares, tenho 20 anos e curso Sistema para Internet (SI) no IFTO campos Palmas e estou no primeiro período </p>
+    <p> Me chamo <strong> Murilo Tavares </strong>, tenho 20 anos e estou <strong> cursando primeiro Período de Sistema para Internet (SI) </strong> no IFTO campos Palmas. </p>
+    <p> <blockquote>Rende-se, como eu me rendi. Mergulhe no que você não conhece como eu mergulhei. Não se preocupe em entender, viver ultrapassa qualquer entendimento. </blockquote> <cite> Clarisse Lispector </cite> </p>
     <h2>Meus Hobbies</h2>
     <p>Meus hobbies são jogar vôlei, jogar games mobile, escutar música, sair pra curtir com amigos, ir a praia, me aventurar e ter um enorme sonho de viajar o mundo.</p>
     <h2>Meus projetos</h2>
     <p>Meus projetos futuros são trabalhar com minha área e poder viajar ao mundo e vivenciar cada momento trabalhando com o que eu gosto.</p>
     <h2>Contatos</h2>
-    <p>E-mail: Murilo.moraes@estudante.ifto.edu.br</p>
-    <p>WhatsApp: <a href="https://wa.me/5563984042739?text=Ol%C3%A1,%20em%20que%20posso%20lhe%20ajudar">Link WhatsApp</a> </p>
+    <ul> <li> E-mail: Murilo.moraes@estudante.ifto.edu.br </li> </ul>
+    <ul> <li> WhatsApp: <a href="https://wa.me/5563984042739?text=Ol%C3%A1,%20em%20que%20posso%20lhe%20ajudar">Link WhatsApp</a> </li> </ul>
+    
     
 </body>
 </html>
-<!- Data 15/02/2023 ->
+<!-- Data 15/02/2023 -->
