--- a/index.html
+++ b/index.html
@@ -1,25 +1,58 @@
-
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Murilo</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Página Murilo</title>
 </head>
+
 <body>
     <h1>Quem sou eu?</h1>
-    <p> Me chamo <strong> Murilo Tavares </strong>, tenho 20 anos e estou <strong> cursando primeiro Período de Sistema para Internet (SI) </strong> no IFTO campos Palmas. </p>
-    <p> <blockquote>Rende-se, como eu me rendi. Mergulhe no que você não conhece como eu mergulhei. Não se preocupe em entender, viver ultrapassa qualquer entendimento. </blockquote> <cite> Clarisse Lispector </cite> </p>
+    <img src="/home/aluno/Documentos/html/Foto de Murilo.jpeg" alt="Foto de Murilo Tavares"
+        title="Foto de Murilo Tavares">
+    <p> Me chamo <strong> Murilo Tavares </strong>, tenho 20 anos e estou <strong> cursando primeiro Período de Sistema
+            para Internet (SI) </strong> no IFTO campos Palmas. </p>
+    <p>Minha familiaridade com computação é pouco, mas me interessei muito pela área e estou aprimorando aos poucos.</p>
+    <p>
+        <blockquote>Rende-se, como eu me rendi. Mergulhe no que você não conhece como eu mergulhei. Não se preocupe em
+            entender, viver ultrapassa qualquer entendimento. </blockquote> <cite> Clarisse Lispector </cite>
+    </p>
     <h2>Meus Hobbies</h2>
-    <p>Meus hobbies são jogar vôlei, jogar games mobile, escutar música, sair pra curtir com amigos, ir a praia, me aventurar e ter um enorme sonho de viajar o mundo.</p>
+    <p>Meus hobbies são jogar vôlei, jogar games mobile, escutar música, sair pra curtir com amigos, ir a praia, me
+        aventurar e ter um enorme sonho de viajar o mundo.</p>
+    <a href="https://www.youtube.com/watch?v=TIhfMuY6FLM">PUBG</a>,<a
+        href="https://www.youtube.com/watch?v=FEpuC98wcXE">MÚSICA</a> e <a
+        href="https://www.youtube.com/watch?v=Fhskvloj1gE">AVENTURAS</a>
     <h2>Meus projetos</h2>
-    <p>Meus projetos futuros são trabalhar com minha área e poder viajar ao mundo e vivenciar cada momento trabalhando com o que eu gosto.</p>
+    <p>Meus projetos futuros são trabalhar com minha área e poder viajar ao mundo e vivenciar cada momento trabalhando
+        com o que eu gosto.</p>
+    <h2>O que estou estudando atualmente</h2>
+    <table border="1">
+        <tr>
+            <th>
+                Máterias
+            </th>
+        <tr>
+            <td>
+                <a href="Fundamentos.html">Fundamentos de Redes e Conectividade</a>
+            </td>
+        </tr>
+        <td>
+            <a href="Introdução.html"> Introdução a Construção de Páginas Web</a>
+        </td>
+        </tr>
+        <td>
+           <a href="Algoritimos.html">Algoritmos e Programação</a>
+        </td>
+        </tr>
+    </table>
     <h2>Contatos</h2>
-    <ul> <li> E-mail: Murilo.moraes@estudante.ifto.edu.br </li> </ul>
-    <ul> <li> WhatsApp: <a href="https://wa.me/5563984042739?text=Ol%C3%A1,%20em%20que%20posso%20lhe%20ajudar">Link WhatsApp</a> </li> </ul>
-    
-    
+    <ul>
+        <li> E-mail: Murilo.moraes@estudante.ifto.edu.br </li>
+    </ul>
+    <ul>
+        <li> WhatsApp: <a href="https://wa.me/5563984042739?text=Ol%C3%A1,%20em%20que%20posso%20lhe%20ajudar">Link
+                WhatsApp</a> </li>
+    </ul>
+
+
 </body>
+
 </html>
-<!- Data 15/02/2023 ->
+<!-- Data 15/02/2023 -->
