--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<html>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Página Murilo</title>
 </head>
 
 <body>
     <h1>Quem sou eu?</h1>
-    <img src="/home/aluno/Documentos/html/Foto de Murilo.jpeg" alt="Foto de Murilo Tavares"
+    <img src="FotodeMurilo.jpeg"
         title="Foto de Murilo Tavares">
     <p> Me chamo <strong> Murilo Tavares </strong>, tenho 20 anos e estou <strong> cursando primeiro Período de Sistema
             para Internet (SI) </strong> no IFTO campos Palmas. </p>
