--- a/Fundamentos.html
+++ b/Fundamentos.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name = "author" content = "Murilo Tavares">
+    <title>Fundamento de Redes e Conectividade</title>
 </head>
+
 <body>
     <h1>
         Fundamentos de Redes e Conectividade
@@ -20,12 +23,12 @@
     </h2>
     <p>
         Componentes básicos de redes de computadores; Tipos, Arquitetura e Topologia de redes de
-computadores; Modelo OSI; Modelo TCP/IP; Roteamento e Endereçamento IP; Tecnologia de redes
-locais. Prática e operação do protocolo IP; Sub-redes IPv4 e IPv6; Roteamento estático e dinâmico IPv4
-e IPv6; NAT de entrada e saída; Conceitos de VPN, QoS e QoE.
+        computadores; Modelo OSI; Modelo TCP/IP; Roteamento e Endereçamento IP; Tecnologia de redes
+        locais. Prática e operação do protocolo IP; Sub-redes IPv4 e IPv6; Roteamento estático e dinâmico IPv4
+        e IPv6; NAT de entrada e saída; Conceitos de VPN, QoS e QoE.
     </p>
     <h2>
-    Competências
+        Competências
     </h2>
     <ul>
         <li>Montar redes baseadas no protocolo IP;</li>
@@ -35,7 +38,7 @@ e IPv6; NAT de entrada e saída; Conceitos de VPN, QoS e QoE.
         <li> testes de conexão em redes IP</li>
     </ul>
     <h2>
-    Habilidades
+        Habilidades
     </h2>
     <ul>
         <li>Configurar uma interface de rede;</li>
@@ -49,5 +52,6 @@ e IPv6; NAT de entrada e saída; Conceitos de VPN, QoS e QoE.
         <li> Entender o funcionamento dos protocolos IPv4 e IPv6.</li>
     </ul>
 </body>
+
 </html>
 <!-- Data 01/03/2023 -->
