--- a/Introdução.html
+++ b/Introdução.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name = "author" content = "Murilo Tavares">
+    <title>Introdução a Construção de Paginas Web</title>
 </head>
+
 <body>
-    <h1>
-        Introdução a Construção de Páginas Web
-    </h1>
+        <h1>
+            Introdução a Construção de Páginas Web
+        </h1>
     <h2>
         Carga horária
     </h2>
-        <li>
-            60 Horas
-        </li>
+    <li>
+        60 Horas
+    </li>
     <h2>
         Ementa
     </h2>
     <p>
-    Linguagem de marcação: HyperText Markup Language (HTML); Construção de estilos para páginas
-Web com Cascade Style Sheet (CSS); CSS avançado (Pseudo seletores, animação, transformação);
-Noções de acessibilidade utilizando HTML; Hospedagem de páginas web em nuvem com integração contínua;
+        Linguagem de marcação: HyperText Markup Language (HTML); Construção de estilos para páginas
+        Web com Cascade Style Sheet (CSS); CSS avançado (Pseudo seletores, animação, transformação);
+        Noções de acessibilidade utilizando HTML; Hospedagem de páginas web em nuvem com integração contínua;
     </p>
     <h2>
         Competências
@@ -45,5 +48,6 @@ Noções de acessibilidade utilizando HTML; Hospedagem de páginas web em nuvem 
         <li>Hospedar páginas de forma automatizada em serviços de nuvem com integração contínua</li>
     </ul>
 </body>
+
 </html>
 <!--Data 01/03/2023-->
