Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name = "author" content = "Murilo Tavares">
     <meta charset="UTF-8">
     <title>Página Murilo Tavares</title>
+Style{
+Body{
+Background-color: blue;};
+} 
 </head>
 
 <body>
